# tiny_pga

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  elems.h  main.cpp  pga3d.h  tiny_autodf.h  tiny_pga.h
.github/workflows/: master.yml
impl/: addition.hpp  geometric_propduct.hpp  inner_product.hpp  outer_product.hpp  subtraction.h
include/: multivector_function_definitions.h
scripts/: pre-commit.sh  setup.sh
test/: CMakeLists.txt  auotdf_pga_test.cpp  autodf_pga3d_test.cpp  autodf_test.cpp  elements_test.cpp  pga3d_test.cpp  pga_test.cpp  tiny_pga_test.cpp
